2012-01-27  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Added delete cascade
	in tplanned_dowtime_agents.

2012-01-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/functions_fsgraph.php: Improved units in flash 
	charts.

2012-01-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/google_chrome.png
	 images/advise_navigator_background.png
	 images/mozilla_firefox.png
	 general/login_page.php: Added web browser advise if the user use
	 Internet Explorer.

2012-01-27  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb.sql
	  pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql: Added delete cascade in tplanned_dowtime_agents.

2012-01-27  Ramon Novoa  <rnovoa@artica.es>

	* include/help/es/help_alert_special_days.php: Added to repository.
	  Translated the special days help file to Spanish.

2012-01-27  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_action_threshold.php: Rewrote the
	  action_threshold help page and added an example.

2012-01-27  Junichi Satoh  <junichi@rworks.jp>

	* include/help/en/help_alert_special_days.php,
	include/help/ja/help_alert_special_days.php: Added new help files
	for special days feature.

2012-01-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

     * include/functions_graph.php
	 include/graphs/functions_fsgraph.php: Modified background color in
	 flash charts.

2012-01-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 operation/agentes/estado_generalagente.php: Added static event 
	 agent graph in main agent view.

2012-01-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Improved the get all agents
	API function to retrieve more data as address, description, 
	operating system and url address

2012-01-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
